--- a/playbooks/ping.yml
+++ b/playbooks/ping.yml
@@ -3,4 +3,6 @@
 
   tasks:
     - name: connectivity check
-        ping: yes
+      shell: ping -c 1 -w 2 {{ ansible_host }}
+      delegate_to: localhost
+      ignore_errors: true
