--- a/playbooks/ping.yml
+++ b/playbooks/ping.yml
@@ -3,6 +3,5 @@
 
   tasks:
     - name: connectivity check
-      shell: ping -c 1 -w 2 {{ ansible_host }}
-      delegate_to: localhost
+      shell: ping -c 1 -w 2 8.8.8.8
       ignore_errors: true
