--- a/playbooks/update-apt-packages.yaml
+++ b/playbooks/update-apt-packages.yaml
@@ -4,6 +4,7 @@
   become: true
   tasks:
     - name: update apt packages
+      become_user: root
       apt:
         upgrade: yes
         update_cache: yes
